--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <title>Check.io</title>
 </head>
 <body>
-  <header>
-
-  </header>
+  <nav class="navbar" style="background: transparent">
+    <a class="navbar-brand">Navbar</a>
+    <a class="">Navbar</a>
+  </nav>
   <main>
 
   </main>
   <footer>
+
   </footer>
 </body>
 </html>
