--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
   <nav class="navbar" style="background: transparent">
-    <a class="navbar-brand">Navbar</a>
-    <a class="">Navbar</a>
+    <div class="header-info">
+      <p>Business Name</p>
+      <div class="online-indicator">i</div>
+    </div>
+    <a href="">Logout</a>
   </nav>
-  <main>
-
-  </main>
+  <container>
+    
+  </container>
   <footer>
 
   </footer>
