--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <nav class="navbar" style="background: transparent">
     <div class="header-info">
       <p>Business Name</p>
-      <div class="online-indicator">i</div>
+      <div class="online-indicator"></div>
     </div>
     <a href="">Logout</a>
   </nav>
   <container>
-    
+
   </container>
   <footer>
 
