--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-  <nav class="navbar" style="background: transparent">
+  <nav class="navbar navbar-big" style="background: transparent">
     <div class="header-info">
-      <p>Business Name</p>
+      <a class="navbar-brand" href="#">Business Name</a>
+
       <div class="online-indicator"></div>
     </div>
     <a href="">Logout</a>
