--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <nav class="navbar navbar-big" style="background: transparent">
     <div class="header-info">
-      <a class="navbar-brand" href="#">Business Name</a>
+      <div class="navbar-brand">Business Name</div>
 
       <div class="online-indicator"></div>
     </div>
-    <a href="">Logout</a>
+    <a class="block-link" href="">Logout</a>
   </nav>
   <container>
 
