--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-big" style="background: transparent">
     <div class="header-info">
       <div class="navbar-brand">Business Name</div>
@@ -16,7 +17,9 @@
     </div>
     <a class="block-link" href="">Logout</a>
   </nav>
-  <div class="container container-card">
+
+
+      <div class="container main-nav">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
@@ -34,13 +37,13 @@
         <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
       </li>
     </ul>
+</div>
 
-
-
-    <div class="container-card tab-content">
-      <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-      <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-      <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
+<div class=" container-card">
+    <div class="card-flex tab-content">
+      <div class="card-content " id="pills-hxome" role="tabpanel" ><div class="section">..a.</div></div>
+      <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section">..a.</div></div>
+      <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section">..a.</div></div>
     </div>
   </div>
   <footer>
