footer and other stuff

--- a/index.html
+++ b/index.html
@@ -9,46 +9,48 @@
 
 <body>
 
-  <nav class="navbar navbar-big" style="background: transparent">
-    <div class="header-info">
-      <div class="navbar-brand">Business Name</div>
+<nav class="navbar navbar-big" style="background: transparent;">
+  <div class="header-info">
+    <div class="navbar-brand">Business Name</div>
+    <div class="online-indicator"></div>
+  </div>
+  <a class="block-link" href="">Logout</a>
+</nav>
 
-      <div class="online-indicator"></div>
-    </div>
-    <a class="block-link" href="">Logout</a>
-  </nav>
-
-
-      <div class="container main-nav">
-    <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
-      </li>
-      <li class="divider">
-        /
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
-      </li>
-      <li class="divider">
-        /
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
-      </li>
-    </ul>
+<div class="container main-nav">
+  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
+    </li>
+    <li class="divider">
+      /
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
+    </li>
+    <li class="divider">
+      /
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
+    </li>
+  </ul>
 </div>
 
-<div class=" container-card">
-    <div class="card-flex tab-content">
-      <div class="card-content " id="pills-hxome" role="tabpanel" ><div class="section">..a.</div></div>
-      <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section">..a.</div></div>
-      <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section">..a.</div></div>
-    </div>
+<div class="container-card">
+  <div class="card-flex tab-content">
+    <div class="card-content " id="pills-hxome" role="tabpanel" ><div class="section">..a.</div></div>
+    <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section">..a.</div></div>
+    <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section">..a.</div></div>
   </div>
-  <footer>
+</div>
 
-  </footer>
+<nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
+  <p>Copyright Big Peen Boys MMXVIII</p>
+  <p class="dark">Made with <span class="accent">❤</span> at Hacksgiving 2018</p>
+  <p>Need help? <a class="accent" href="#">Contact Us</a>
+</nav>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
