fixed font thing

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 </div>
 
 <nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
-  <p>Copyright Big Peen Boys MMXVIII</p>
-  <p class="dark">Made with <span class="accent">❤</span> at Hacksgiving 2018</p>
-  <p>Need help? <a class="accent" href="#">Contact Us</a>
+  <p class="grey">Copyright Big Peen Boys MMXVIII</p>
+  <p>Made with <span class="accent">❤</span> at Hacksgiving 2018</p>
+  <p class="grey">Need help? <a class="accent" href="#">Contact Us</a></p>
 </nav>
 
 </body>
