--- a/index.html
+++ b/index.html
@@ -19,39 +19,63 @@
   </nav>
 
 
-      <div class="container main-nav">
+  <div class="container main-nav">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
-        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
+        <a class="nav-link active" id="pills-customer-tab" data-toggle="pill" href="#pills-customer" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
       </li>
       <li class="divider">
         /
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
+        <a class="nav-link" id="pills-payment-tab" data-toggle="pill" href="#pills-payment" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
       </li>
       <li class="divider">
         /
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
+        <a class="nav-link" id="pills-settings-tab" data-toggle="pill" href="#pills-settings" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
       </li>
     </ul>
-</div>
+  </div>
 
-<div class=" container-card">
+  <div class=" container-card">
     <div class="card-flex tab-content">
-      <div class="card-content " id="pills-hxome" role="tabpanel" ><div class="section">..a.</div></div>
-      <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section">..a.</div></div>
-      <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section">..a.</div></div>
+      <div class="card-content " id="pills-customer" role="tabpanel">
+        <div class="section">..a.</div>
+      </div>
+      <div class=" card-content " id="pills-payment" role="tabpanel">
+        <div class="section">..a.</div>
+      </div>
+      <div class=" card-content " id="pills-settings" role="tabpanel">
+        <div class="section">..a.</div>
+      </div>
     </div>
   </div>
+
   <footer>
 
   </footer>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+<script>
+  $("#pills-customer-tab").click(function() {
+    $('.card-flex').removeClass(function(index, css) {
+      return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
+    }).addClass("slide-customer");
+  });
+  $('#pills-payment-tab').click(function() {
+    $('.card-flex').removeClass(function(index, css) {
+      return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
+    }).addClass("slide-payment");
+  });
+  $("#pills-settings-tab").click(function() {
+    $('.card-flex').removeClass(function(index, css) {
+      return (css.match(/\bslide-\S+/g) || []).join(' ');
+    }).addClass("slide-settings");
+  });
+</script>
 </html>
