--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div class="container-card">
-  <div class="card-flex tab-content">
+  <div class="card-flex tab-content slide-customer">
     <div class="card-content " id="pills-hxome" role="tabpanel" ><div class="section border">..a.</div></div>
     <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section  border">..a.</div></div>
     <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section border">..a.</div></div>
