second card done

--- a/index.html
+++ b/index.html
@@ -144,15 +144,123 @@
         </div>
       </div>
     </div>
-    <div class=" card-content " id="pills-profile" role="tabpanel"><div class="section  border">..a.</div></div>
+    <div class=" card-content " id="pills-profile" role="tabpanel">
+      <div class="section  border">
+        <div class="consumer-container">
+          <div class="row">
+            <div class="col">
+              <input type="text" placeholder="Search..">
+              <div class="row">
+                <div class="col">
+                  <h2>History</h2>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col align-left">
+                  <div class="person">
+                    <div class="icon"></div>
+                    <h3>Full Name</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col align-left">
+                  <div class="person">
+                    <div class="icon"></div>
+                    <h3>Full Name</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col align-left">
+                  <div class="person">
+                    <div class="icon"></div>
+                    <h3>Full Name</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col align-left">
+                  <div class="person">
+                    <div class="icon"></div>
+                    <h3>Full Name</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3>Cancel Payment</h3>
+                </div>
+              </div>
+              <hr />
+              <div class="row">
+                <div class="col align-left">
+                  <h3>Food Item</h3>
+                  <h3>Description</h3>
+                  <ul style="list-style: none;">
+                    <li>Options</li>
+                      <ul>
+                        <li>Option 1</li>
+                        <li>Option 2</li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col align-right">
+                  <p>$200.44</p>
+                </div>
+              </div>
+              <hr />
+              <div class="row">
+                <div class="col align-left">
+                  <h3>Food Item</h3>
+                  <h3>Description</h3>
+                </div>
+                <div class="col align-right">
+                  <p>$200.44</p>
+                </div>
+              </div>
+              <hr />
+              <div class="row">
+                <div class="col align-left">
+                  <h3>Payment Options</h3>
+                </div>
+                <div class="col align-right">
+                  <h3>Total Before Tax:</h3>
+                  <h3>Tax:</h3>
+                  <h3></h3>
+                  <h3>Total:</h3>
+                </div>
+                <div class="col align-right">
+                  <h3>$400.88</h3>
+                  <h3>+ $40.12</h3>
+                  <h3></h3>
+                  <h3>$441</h3>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col align-right" style="display:inline-flex;">
+                  <button>Physical Payment</button>
+                  <button>Pay with Check.io</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section border">..a.</div></div>
   </div>
 </div>
 
+
+
 <nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
   <p class="grey">Copyright Big Peen Boys MMXVIII</p>
   <p>Made with <span class="accent">❤</span> at Hacksgiving 2018</p>
-  <p class="grey">Need help? <a class="accent" href="#">Contact Us</a></p>
+  <p class="grey">Need Help? <a class="accent" href="#">Contact Us</a></p>
 </nav>
 
 </body>
