--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
         </div>
       </div>
     </div>
-    <div class=" card-content " id="pills-contact" role="tabpanel" ><div class="section border">..a.</div></div>
+    <div class=" card-content " id="pills-contact" role="tabpanel" >
+      <div class="section border">
+        
+      </div>
+    </div>
   </div>
 </div>
 
