--- a/index.html
+++ b/index.html
@@ -253,7 +253,54 @@
     </div>
     <div class=" card-content " id="pills-contact" role="tabpanel" >
       <div class="section border">
-        
+        <div class="consumer-container">
+          <div class="row">
+            <div class="col">
+              <h3>Name</h3>
+            </div>
+            <div class="col">
+              <h3>Full Name</h3>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col">
+              <h3>Email</h3>
+            </div>
+            <div class="col">
+              <h3>businessemail@email.com</h3>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col">
+              <h3>Password</h3>
+            </div>
+            <div class="col">
+              <h3>••••••••</h3>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col">
+              <h3>Credit Card</h3>
+            </div>
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <h3>Number</h3>
+                  <h3>CVV</h3>
+                  <h3>Expiration Date</h3>
+                </div>
+                <div class="col">
+                  <h3>*********1234</h3>
+                  <h3>123</h3>
+                  <h3>01/23</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
