--- a/index.html
+++ b/index.html
@@ -16,30 +16,31 @@
     </div>
     <a class="block-link" href="">Logout</a>
   </nav>
-
+  <div id="slider"class="carousel slide">
   <div class="container main-nav">
     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
       <li class="nav-item">
-        <a class="nav-link active" id="pills-customer-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
+        <a class="nav-link active" id="pills-customer-tab" data-target="#slider"  data-slide-to="0" class="active"  data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Customer</a>
       </li>
       <li class="divider">
         /
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="pills-payment-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
+        <a class="nav-link" id="pills-payment-tab" data-toggle="pill" href="#pills-profile" data-target="#slider" data-slide-to="1" role="tab" aria-controls="pills-profile" aria-selected="false">Payment</a>
       </li>
       <li class="divider">
         /
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="pills-settings-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Settings</a>
+        <a class="nav-link" id="pills-settings-tab" data-toggle="pill" href="#pills-contact" role="tab"  data-target="#slider" data-slide-to="2" aria-controls="pills-contact" aria-selected="false">Settings</a>
       </li>
     </ul>
   </div>
 
   <div class="container-card">
     <div class="card-flex tab-content">
-      <div class="card-content " id="pills-hxome" role="tabpanel">
+       <div class="carousel-inner">
+      <div class="card-content  carousel-item active" id="pills-hxome" role="tabpanel">
         <div class="section border">
           <div class="container-fluid ">
 
@@ -186,14 +187,8 @@
         </div>
         </div>
       </div>
-      <div class=" card-content " id="pills-profile" role="tabpanel">
-        <div class="section  border">..a.</div>
-      </div>
-      <div class=" card-content " id="pills-contact" role="tabpanel">
-        <div class="section border">..a.</div>
-      </div>
-    </div>
-    <div class=" card-content " id="pills-profile" role="tabpanel">
+  
+    <div class=" card-content carousel-item  " id="pills-profile" role="tabpanel">
       <div class="section  border">
         <div class="consumer-container">
           <div class="row">
@@ -300,7 +295,7 @@
         </div>
       </div>
     </div>
-    <div class=" card-content " id="pills-contact" role="tabpanel" >
+    <div class=" card-content carousel-item " id="pills-contact" role="tabpanel" >
       <div class="section border">
         <div class="consumer-container">
           <div class="row">
@@ -353,7 +348,8 @@
       </div>
     </div>
   </div>
-
+  </div>
+</div>
 
 
 <nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
@@ -367,21 +363,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
-  $("#pills-customer-tab").click(function() {
-    $('.card-flex').removeClass(function(index, css) {
-      return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
-    }).addClass("slide-customer");
-  });
-  $('#pills-payment-tab').click(function() {
-    $('.card-flex').removeClass(function(index, css) {
-      return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
-    }).addClass("slide-payment");
-  });
-  $("#pills-settings-tab").click(function() {
-    $('.card-flex').removeClass(function(index, css) {
-      return (css.match(/\bslide-\S+/g) || []).join(' ');
-    }).addClass("slide-settings");
-  });
+  // $("#pills-customer-tab").click(function() {
+  //   $('.card-flex').removeClass(function(index, css) {
+  //     return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
+  //   }).addClass("slide-customer");
+  // });
+  // $('#pills-payment-tab').click(function() {
+  //   $('.card-flex').removeClass(function(index, css) {
+  //     return (css.match(/\bslide-\S+/g) || []).join(' '); // removes anything that starts with "page-"
+  //   }).addClass("slide-payment");
+  // });
+  // $("#pills-settings-tab").click(function() {
+  //   $('.card-flex').removeClass(function(index, css) {
+  //     return (css.match(/\bslide-\S+/g) || []).join(' ');
+  //   }).addClass("slide-settings");
+  // });
 </script>
 
 </html>
