--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </ul>
   </div>
 
-  <div class="container-card">
-    <div class="card-flex tab-content">
-       <div class="carousel-inner">
-      <div class="card-content  carousel-item active" id="pills-hxome" role="tabpanel">
+  <div class="container-card carousel-inner">
+
+
+      <div class=" container card-content  carousel-item active" id="pills-hxome" role="tabpanel">
         <div class="section border">
           <div class="container-fluid ">
 
@@ -187,8 +187,8 @@
         </div>
         </div>
       </div>
-  
-    <div class=" card-content carousel-item  " id="pills-profile" role="tabpanel">
+
+    <div class=" container card-content carousel-item  " id="pills-profile" role="tabpanel">
       <div class="section  border">
         <div class="consumer-container">
           <div class="row">
@@ -295,7 +295,7 @@
         </div>
       </div>
     </div>
-    <div class=" card-content carousel-item " id="pills-contact" role="tabpanel" >
+    <div class=" container card-content carousel-item " id="pills-contact" role="tabpanel" >
       <div class="section border">
         <div class="consumer-container">
           <div class="row">
@@ -347,8 +347,8 @@
         </div>
       </div>
     </div>
-  </div>
-  </div>
+
+
 </div>
 
 
