--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <nav class="navbar navbar-big" style="background: transparent;">
+  <nav class="navbar navbar-big  fixed-top" style="background: transparent;">
     <div class="header-info">
       <div class="navbar-brand">Business Name</div>
       <div class="online-indicator"></div>
@@ -46,8 +46,8 @@
 
 
               <div class="consumer-container">
-                <div class="row search">
-                  <div class="col">
+                <div class="row ">
+                  <div class="col search">
                     <input type="text" placeholder="Search..">
                   </div>
                 </div>
@@ -185,7 +185,7 @@
                   </div>
                 </div>
               </div>
-            
+
           </div>
 
           <div class="tab-pane fade show " id="pills-payment" role="tabpanel">
