--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <title>Check.io</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -47,8 +50,11 @@
 
               <div class="consumer-container">
                 <div class="row ">
-                  <div class="col search">
-                    <input type="text" placeholder="Search..">
+                  <div class="col-sm-6 ">
+                    <div class="search">
+                    <span class="icon>"<i class="fa fa-search"></i></span>
+                    <input type="search" placeholder="Search">
+                  </div>
                   </div>
                 </div>
                 <div class="row overlap">
