--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="row ">
                   <div class="col-sm-6 ">
                     <div class="search">
-                    <span class="icon>"<i class="fa fa-search"></i></span>
-                    <input type="search" placeholder="Search">
+                    <span class="icon"><i class="fa fa-search"></i></span>
+                    <input type="search" placeholder="Search"/>
                   </div>
                   </div>
                 </div>
