--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <div class="row">
                       <div class="col col-name">
                         <h2>Nearby</h2>
-                        <button>Add Name</button>
+                        <button type="button" class="btn btn-transparent"><i class="fas fa-plus"></i>
+                          Add Name
                       </div>
                     </div>
                     <div class=" row div-scroll">
