--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                               <div class="icon"></div>
                               <h3>Full Name</h3>
                             </div>
+                            <a href="">check in</a>
                           </div>
                         </div>
                         <div class="row">
