--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                               <div class="icon"></div>
                               <h3>Full Name</h3>
                             </div>
-                            <a href="">check in</a>
+                            <a href=""  data-toggle="modal" data-target="#payment-modal">pay now</a>
                           </div>
                         </div>
                         <div class="row">
@@ -133,8 +133,6 @@
                         <h4>Ocupancy: 15/20</h4>
                       </div>
 
-
-
                     </div>
                     <div class=" row div-scroll">
                       <div class="col">
@@ -144,6 +142,9 @@
                               <div class="icon"></div>
                               <h3>Full Name</h3>
                             </div>
+                            <a href=""  data-toggle="modal" data-target="#payment-modal">pay now</a>
+
+
                           </div>
                         </div>
                         <div class="row">
@@ -362,7 +363,29 @@
     </div>
   </div>
 
-
+  <div class="modal " id="payment-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">Pay %[USER]</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6">.col-md-4</div>
+      <div class="col-md-6 ml-auto">.col-md-4 .ml-auto</div>
+    </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-transparent-a" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-brand">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
     <p class="grey">Copyright Big Peen Boys MMXVIII</p>
     <p>Made with <span class="accent">❤</span> at Hacksgiving 2018</p>
