--- a/login.html
+++ b/login.html
@@ -8,9 +8,12 @@
 </head>
 
 <body class="login-body">
+
   <nav class="footer navbar navbar-big fixed-top" style="background: transparent;">
     <a class="navbar-brand" href="#">Check.io</a>
   </nav>
+  <div class="animate-div">
+  </div>
   <div class="container-fluid login-view">
 
     <div class="row">
