main page content

--- a/main.html
+++ b/main.html
@@ -7,6 +7,35 @@
   <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-
+  <div class="mainbody">
+    <div class="hero">
+      <nav class="footer navbar navbar-big fixed-top" style="background: transparent;">
+        <a class="navbar-brand" href="#">Check.io</a>
+        <div class="loginsignup">
+          <a class="block-link" href="">Login</a>
+          <a class="block-link" href="">Sign Up</a>
+        </div>
+      </nav>
+      <div class="slogan">
+        <div class="row align-middle">
+          <div class="col align-middle">
+            <h1>Welcome to the future of ecommerce.</h1>
+            <p>
+              Block of text Block of text Block of text Block of text Block of text Block of text
+              Block of text Block of text Block of text Block of text Block of text Block of text
+              Block of text Block of text Block of text Block of text Block of text Block of text
+            </p>
+            <button><h3>Check us out</h3></button>
+          </div>
+          <div class="col align-middle">
+            <img src="images/macbook mockup.png" />
+          </div>
+        </div>
+      </div>
+      <nav class="footer navbar navbar-big fixed-bottom" style="background: transparent;">
+        <p class="grey">Copyright Big Peen Boys MMXVIII</p>
+      </nav>
+    </div>
+  </div>
 </body>
 </html>
