--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         </div>
       </nav>
       <div class="slogan">
-        <div class="row align-middle">
+        <div class="row align-middle align-items-center">
           <div class="col align-middle">
             <h1>Welcome to the future of ecommerce.</h1>
             <p>
@@ -25,7 +25,7 @@
               Block of text Block of text Block of text Block of text Block of text Block of text
               Block of text Block of text Block of text Block of text Block of text Block of text
             </p>
-            <button><h3>Check us out</h3></button>
+            <button class="btn btn-brand"><h3>Check us out</h3></button>
           </div>
           <div class="col align-middle">
             <img src="images/macbook mockup.png" />
