--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css" />
 </head>
-<body>
+<body class="main-body-top ">
   <div class="mainbody">
     <div class="hero">
       <nav class="footer navbar navbar-big fixed-top" style="background: transparent;">
