--- a/main.html
+++ b/main.html
@@ -12,22 +12,27 @@
       <nav class="footer navbar navbar-big fixed-top" style="background: transparent;">
         <a class="navbar-brand" href="#">Check.io</a>
         <div class="loginsignup">
-          <a class="block-link" href="">Login</a>
+          <a class="block-link padding-left" href="">Login</a>
+
           <a class="block-link" href="">Sign Up</a>
         </div>
       </nav>
-      <div class="slogan">
+      <div class="slogan container">
         <div class="row align-middle align-items-center">
           <div class="col align-middle">
             <h1>Welcome to the future of ecommerce.</h1>
-            <p>
+            <div class="spacing">
+            </div>
+            <h4class= "slogantext">
               Ever been to a restaurant where you had to wait 10 minutes just for the bill?
               Yeah. It sucks. It's time we changed that with some 2018 technology.
               Check.io allows users to better engage with the restaurant experience while streamlining the process.
-              You don't have to take our their phone <i class="accent">at all</i> when going to a restaurant.
+              You don't have to take our their phone <i>at all</i> when going to a restaurant.
               This is the walk in, eat, walk out philosophy.
-            </p>
-            <button class="btn btn-brand"><h3>Check us out</h3></button>
+            </h4>
+            <div class="spacing">
+            </div>
+            <button class="btn btn-brand">Check us out</button>
           </div>
           <div class="col align-middle">
             <img src="images/macbook mockup.png" />
